# offboard_landing

./: CMakeLists.txt  README.md  package.xml
config/: waypoints.yaml
include/offboard_landing/: conversion.h  logging.h  offboard.h  offboard_landing.h
src/: .gps_node.cpp  .offboard_node_old.cpp  .setpoint_node.cpp  gps_node.cpp  gps_offb.cpp  hover_node.cpp  hovering_node.cpp  logging_lib.cpp  logging_node.cpp  offboard_lib.cpp  offboard_node.cpp  setmode.cpp  setmode_offb.cpp  setpoint_node.cpp
